# Socket-Server

./: .gitignore  CMakeLists.txt  Readme.md  Server.cpp  informwinServer.cpp  package.cpp  package.h  server.h
Readme.assets/: package.drawio
TestClient/: TestClient.cpp
